--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git clone https://github.com/microsoft/vcpkg
           .\vcpkg\bootstrap-vcpkg.bat
-          .\vcpkg\vcpkg.exe install openssl:x64-windows hwloc:x64-windows
+          .\vcpkg\vcpkg.exe install libuv:x64-windows-static openssl:x64-windows-static hwloc:x64-windows-static
 
       # -------------------------
       # Configure + Build (docs-style)
@@ -69,7 +69,9 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path build | Out-Null
           cmake -S . -B build `
-            -A x64 `
+            -G "Visual Studio 17 2022" -A x64 `
+            -DCMAKE_BUILD_TYPE=Release `
+            -DVCPKG_TARGET_TRIPLET=x64-windows-static `
             -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake"
 
       - name: Build (Windows)
@@ -143,11 +145,13 @@ jobs:
           # sources
           New-Item -ItemType Directory -Force -Path "$outdir\src" | Out-Null
           robocopy "src" "$outdir\src" /E /XD ".git" "build" | Out-Null
+          if ($LASTEXITCODE -ge 8) { throw "robocopy src failed: $LASTEXITCODE" }
 
           # WinRing0 (MSR)
           if (Test-Path "bin\WinRing0") {
             New-Item -ItemType Directory -Force -Path "$outdir\WinRing0" | Out-Null
             robocopy "bin\WinRing0" "$outdir\WinRing0" /E | Out-Null
+            if ($LASTEXITCODE -ge 8) { throw "robocopy WinRing0 failed: $LASTEXITCODE" }
           }
 
           Compress-Archive -Force -Path "$outdir\*" -DestinationPath "$outdir.zip"
